Fix navigation links for GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
         <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="container w-container">
                 <div class="w-layout-grid grid-nav">
-                    <a href="/" id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef3f-18a8ef3c" aria-current="page" class="brand w-nav-brand w--current">
+                    <a href="/breakaway-digital-2/" id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef3f-18a8ef3c" aria-current="page" class="brand w-nav-brand w--current">
                         <img src="main-icon.png" loading="lazy" alt="Main Icon" class="logo-icon"/>
                         <img src="main-text.png" loading="lazy" alt="Main Text" class="logo-text"/>
                     </a>
                     <nav role="navigation" id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef41-18a8ef3c" class="nav-menu w-nav-menu">
-                        <a href="/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-                        <a href="/about.html" class="nav-link w-nav-link">About</a>
-                        <a href="/who-i-work-with.html" class="nav-link w-nav-link">Who I work with</a>
-                        <a href="/services.html" class="nav-link w-nav-link">Services</a>
+                        <a href="/breakaway-digital-2/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
+                        <a href="/breakaway-digital-2/about.html" class="nav-link w-nav-link">About</a>
+                        <a href="/breakaway-digital-2/who-i-work-with.html" class="nav-link w-nav-link">Who I work with</a>
+                        <a href="/breakaway-digital-2/services.html" class="nav-link w-nav-link">Services</a>
                     </nav>
                     <div id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef64-18a8ef3c" class="right-nav">
                         <div class="nav-button-wrap">
-                            <a data-wf--button--variant="small-button-link-hover" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/contact.html" class="button-link-hover w-variant-c3a75f8d-b93b-cbd1-c81c-34efceeecc74 w-inline-block">
+                            <a data-wf--button--variant="small-button-link-hover" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/breakaway-digital-2/contact.html" class="button-link-hover w-variant-c3a75f8d-b93b-cbd1-c81c-34efceeecc74 w-inline-block">
                                 <div class="button-content">
                                     <div class="button-text-wrap regular-text">
                                         <div class="button-text">Contact now</div>
@@ -142,7 +142,7 @@
                                 <p data-w-id="1052487d-6cd5-e46e-62ee-c72f4afbcc34">Unlock your company's full potential with expert guidance, tailored solutions, and proven results from our seasoned consultants.</p>
                             </div>
                             <div data-w-id="2b2e4955-ad55-438f-d5e8-526c1dac2fa0">
-                                <a data-wf--button--variant="base" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/about.html" class="button-link-hover w-inline-block">
+                                <a data-wf--button--variant="base" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/breakaway-digital-2/about.html" class="button-link-hover w-inline-block">
                                     <div class="button-content">
                                         <div class="button-text-wrap regular-text">
                                             <div class="button-text">Learn more</div>
@@ -258,7 +258,7 @@
                             <div class="about-label">About Copora</div>
                             <h2 class="about-title">Driven by insight. Focused on results.</h2>
                             <p class="about-description">We provide tailored consulting solutions to help businesses overcome challenges, seize opportunities, and achieve sustainable growth.</p>
-                            <a href="/about" class="about-button">More about us</a>
+                            <a href="/breakaway-digital-2/about.html" class="about-button">More about us</a>
                         </div>
                     </div>
                     <div class="about-image">
@@ -279,7 +279,7 @@
                              alt="Modern office desk setup with laptop and plants" 
                              class="how-we-work-main-image">
                         <div class="how-we-work-cta">
-                            <a href="/contact" class="how-we-work-button">Want to know what's possible? Get in touch now</a>
+                            <a href="/breakaway-digital-2/contact.html" class="how-we-work-button">Want to know what's possible? Get in touch now</a>
                         </div>
                     </div>
                     <div class="how-we-work-content">
@@ -345,7 +345,7 @@
                              alt="Modern office desk setup" 
                              class="cta-hero-main-image">
                         <div class="cta-hero-button-wrap">
-                            <a href="/contact" class="cta-hero-button">Get started now</a>
+                            <a href="/breakaway-digital-2/contact.html" class="cta-hero-button">Get started now</a>
                         </div>
                     </div>
                 </div>
