--- a/services.html
+++ b/services.html
@@ -632,19 +632,19 @@
     <nav class="navbar">
         <div class="container">
             <div class="grid-nav">
-                <a href="/" class="brand">
+                <a href="/breakaway-digital-2/" class="brand">
                     <img src="main-icon.png" alt="Main Icon" class="logo-icon"/>
                     <img src="main-text.png" alt="Main Text" class="logo-text"/>
                 </a>
                 <div class="nav-menu">
-                    <a href="/" class="nav-link">Home</a>
-                    <a href="/about.html" class="nav-link">About</a>
-                    <a href="/who-i-work-with.html" class="nav-link w-nav-link">Who I work with</a>
-                    <a href="/services.html" class="nav-link w--current">Services</a>
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="/breakaway-digital-2/" class="nav-link">Home</a>
+                    <a href="/breakaway-digital-2/about.html" class="nav-link">About</a>
+                    <a href="/breakaway-digital-2/who-i-work-with.html" class="nav-link w-nav-link">Who I work with</a>
+                    <a href="/breakaway-digital-2/services.html" class="nav-link w--current">Services</a>
+                    <a href="/breakaway-digital-2/contact.html" class="nav-link">Contact</a>
                 </div>
                 <div class="right-nav">
-                    <a href="/contact.html" class="button-link-hover">Contact now</a>
+                    <a href="/breakaway-digital-2/contact.html" class="button-link-hover">Contact now</a>
                 </div>
             </div>
         </div>
