--- a/index.html
+++ b/index.html
@@ -101,37 +101,8 @@
         <link href="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/684bcec2eea30b5d520ddd32_webclip.png" rel="apple-touch-icon"/>
     </head>
     <body>
-        <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-            <div class="container w-container">
-                <div class="w-layout-grid grid-nav">
-                    <a href="/breakaway-digital-2/" id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef3f-18a8ef3c" aria-current="page" class="brand w-nav-brand w--current">
-                        <img src="main-icon.png" loading="lazy" alt="Main Icon" class="logo-icon"/>
-                        <img src="main-text.png" loading="lazy" alt="Main Text" class="logo-text"/>
-                    </a>
-                    <nav role="navigation" id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef41-18a8ef3c" class="nav-menu w-nav-menu">
-                        <a href="/breakaway-digital-2/" aria-current="page" class="nav-link w-nav-link w--current">Home</a>
-                        <a href="/breakaway-digital-2/about.html" class="nav-link w-nav-link">About</a>
-                        <a href="/breakaway-digital-2/who-i-work-with.html" class="nav-link w-nav-link">Who I work with</a>
-                        <a href="/breakaway-digital-2/services.html" class="nav-link w-nav-link">Services</a>
-                    </nav>
-                    <div id="w-node-e6ff9f79-f479-fa42-6f69-a3df18a8ef64-18a8ef3c" class="right-nav">
-                        <div class="nav-button-wrap">
-                            <a data-wf--button--variant="small-button-link-hover" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/breakaway-digital-2/contact.html" class="button-link-hover w-variant-c3a75f8d-b93b-cbd1-c81c-34efceeecc74 w-inline-block">
-                                <div class="button-content">
-                                    <div class="button-text-wrap regular-text">
-                                        <div class="button-text">Contact now</div>
-                                    </div>
-                                </div>
-                                <div class="button-bg"></div>
-                            </a>
-                        </div>
-                        <div class="menu-button w-nav-button">
-                            <div class="w-icon-nav-menu"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!-- Navigation - Loaded via JavaScript -->
+        <div id="navbar-container"></div>
         <section class="hero-section">
             <div class="w-layout-blockcontainer container w-container">
                 <div class="w-layout-grid grid-hero">
@@ -358,8 +329,18 @@
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="script.js" type="text/javascript"></script>
         
-        <!-- Load Footer -->
+        <!-- Load Navbar and Footer -->
         <script>
+            // Load navbar content
+            fetch('navbar.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('navbar-container').innerHTML = data;
+                })
+                .catch(error => {
+                    console.error('Error loading navbar:', error);
+                });
+            
             // Load footer content
             fetch('footer.html')
                 .then(response => response.text())
