Reduce navbar height to half inch (36px) while preserving logo sizes

--- a/navbar.html
+++ b/navbar.html
@@ -1,8 +1,8 @@
 <!-- Navigation -->
-<nav class="navbar">
+<nav class="navbar" style="height: 36px; min-height: 36px; max-height: 36px; padding: 0.25rem 0;">
     <div class="container">
-        <div class="grid-nav">
-            <a href="/breakaway-digital-2/" class="brand">
+        <div class="grid-nav" style="height: 36px; align-items: center;">
+            <a href="/breakaway-digital-2/" class="brand" style="height: 36px; display: flex; align-items: center;">
                 <img src="main-icon.png" alt="Main Icon" class="logo-icon"/>
                 <img src="main-text.png" alt="Main Text" class="logo-text"/>
             </a>
