Fix content overlap by adjusting hero section padding for navbar height

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         .button-link-hover:hover { background: #1a3a5c; transform: translateY(-1px); }
         
         /* About Page Styles */
-        .hero-section { padding: 120px 0; background: white; }
+        .hero-section { padding: 90px 0; background: white; margin-top: 70px; }
         .container-medium { max-width: 1000px; margin: 0 auto; padding: 0 40px; }
         .about-title-center { text-align: center; margin-bottom: 4rem; }
         .about-hero-title { font-size: 3.5rem; font-weight: bold; margin-bottom: 1.5rem; line-height: 1.1; color: #002748; }
