--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         .button-link-hover:hover { background: #1a3a5c; transform: translateY(-1px); }
         
         /* Contact Page Styles */
-        .hero-section { padding: 120px 0; background: white; }
+        .hero-section { padding: 90px 0; background: white; margin-top: 70px; }
         .hero-contact-wrap { text-align: center; margin-bottom: 4rem; }
         .hero-contact-wrap h1 { font-size: 3.5rem; font-weight: bold; color: #002748; margin-bottom: 1.5rem; line-height: 1.1; }
         .hero-contact-wrap p { font-size: 1.2rem; color: #4a5568; max-width: 600px; margin: 0 auto 3rem; line-height: 1.6; }
