--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
         .button-link-hover:hover { background: #1a3a5c; transform: translateY(-1px); }
         
         /* Services Page Styles */
-        .hero-section { padding: 120px 0; background: white; }
+        .hero-section { padding: 90px 0; background: white; margin-top: 70px; }
         .grid-simple-service { 
             display: grid; 
             grid-template-columns: 1fr 1fr; 
