--- a/navbar.html
+++ b/navbar.html
@@ -1,18 +1,18 @@
 <!-- Navigation -->
-<nav class="navbar" style="height: 70px; min-height: 70px; max-height: 70px; padding: 0.5rem 0;">
-    <div class="container">
-        <div class="grid-nav" style="height: 70px; align-items: center;">
-            <a href="/breakaway-digital-2/" class="brand" style="height: 70px; display: flex; align-items: center;">
+<nav class="navbar" style="height: 70px; min-height: 70px; max-height: 70px; padding: 0.5rem 0; display: flex; align-items: center;">
+    <div class="container" style="height: 100%; display: flex; align-items: center;">
+        <div class="grid-nav" style="height: 100%; align-items: center; display: flex; width: 100%;">
+            <a href="/breakaway-digital-2/" class="brand" style="height: auto; display: flex; align-items: center;">
                 <img src="main-icon.png" alt="Main Icon" class="logo-icon"/>
                 <img src="main-text.png" alt="Main Text" class="logo-text"/>
             </a>
-            <div class="nav-menu">
+            <div class="nav-menu" style="display: flex; align-items: center; height: 100%;">
                 <a href="/breakaway-digital-2/" class="nav-link" id="nav-home">Home</a>
                 <a href="/breakaway-digital-2/about.html" class="nav-link" id="nav-about">About</a>
                 <a href="/breakaway-digital-2/who-i-work-with.html" class="nav-link" id="nav-who">Who I work with</a>
                 <a href="/breakaway-digital-2/services.html" class="nav-link" id="nav-services">Services</a>
             </div>
-            <div class="right-nav">
+            <div class="right-nav" style="display: flex; align-items: center; height: 100%;">
                 <a href="/breakaway-digital-2/contact.html" class="button-link-hover">Contact now</a>
             </div>
         </div>
