Adjust navbar layout and grid width

--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
                         <p data-w-id="f75dd954-a7c6-45fa-e144-adfc3628d172" class="section-description">We provide tailored consulting solutions to help businesses overcome challenges, seize opportunities, and achieve sustainable growth.</p>
                     </div>
                     <div data-w-id="d9cd339a-925d-e449-9da9-ede7c03613c4" class="w-layout-grid grid-service">
-                        <a href="/service-detail" class="service-item w-inline-block">
+                        <a href="/services.html" class="service-item w-inline-block">
                             <img src="https://www.asta.com.au/media/1482/pexels-rebrand-cities-1367271.jpg" loading="eager" alt="Image" class="service-image"/>
                             <div class="service-title">Business strategy</div>
                         </a>
-                        <a href="/service-detail" class="service-item w-inline-block">
+                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d967427f0c59b655b24_service-02.jpg" loading="eager" alt="Image" class="service-image"/>
                             <div class="service-title">Process optimization</div>
                         </a>
-                        <a href="/service-detail" class="service-item w-inline-block">
+                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d96fe90bfcea80b9a6a_service-03.jpg" loading="eager" alt="Image" class="service-image"/>
                             <div class="service-title">Financial advisory</div>
                         </a>
-                        <a href="/service-detail" class="service-item w-inline-block">
+                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d964991f2e7abc51fe1_c9af04cf09a0ce950abb6e3ac81f7407_service-04.jpg" loading="eager" alt="Image" class="service-image"/>
                             <div class="service-title">Market research</div>
                         </a>
