--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="navbar" style="height: 70px; min-height: 70px; max-height: 70px; padding: 0.5rem 0; display: flex; align-items: center;">
     <div class="container" style="height: 100%; display: flex; align-items: center;">
-        <div class="grid-nav" style="height: 100%; align-items: center; display: flex; width: 100%;">
+        <div class="grid-nav" style="height: 100%; align-items: center; display: flex;">
             <a href="/breakaway-digital-2/" class="brand" style="height: auto; display: flex; align-items: center;">
                 <img src="main-icon.png" alt="Main Icon" class="logo-icon"/>
                 <img src="main-text.png" alt="Main Text" class="logo-text"/>
