--- a/services.html
+++ b/services.html
@@ -771,7 +771,7 @@
             </div>
 
             <!-- Service Detail Modal/Expanded View -->
-            <div id="service-detail" style="display: none; background: #f8f9fa; padding: 3rem; border-radius: 12px; border-left: 4px solid #F05A2B; margin-top: 2rem;">
+            <div id="/breakaway-digital-2/services.html" style="display: none; background: #f8f9fa; padding: 3rem; border-radius: 12px; border-left: 4px solid #F05A2B; margin-top: 2rem;">
                 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
                     <h3 id="service-title" style="font-size: 1.8rem; font-weight: bold; color: #002748; margin: 0;"></h3>
                     <button id="close-detail" style="background: #002748; color: white; border: none; padding: 0.5rem 1rem; border-radius: 6px; cursor: pointer; font-size: 0.9rem;">Close</button>
@@ -1173,7 +1173,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             // Service Cards Interaction
             const serviceCards = document.querySelectorAll('.service-card');
-            const serviceDetail = document.getElementById('service-detail');
+            const serviceDetail = document.getElementById('/breakaway-digital-2/services.html');
             const serviceTitle = document.getElementById('service-title');
             const serviceDescription = document.getElementById('service-description');
             const serviceBenefitsList = document.getElementById('service-benefits-list');
