Update website content for Breakaway Digital - IT consulting focus

--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>About - Copora</title>
-    <meta content="Learn more about Copora's consulting services and our team of experts." name="description"/>
+    <title>About - Breakaway Digital</title>
+    <meta content="Learn more about Breakaway Digital's IT consulting services and our team of experts." name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="styles.css?v=20250122" rel="stylesheet" type="text/css"/>
     <link href="footer.css" rel="stylesheet" type="text/css"/>
@@ -465,8 +465,8 @@
     <section class="hero-section">
         <div class="container-medium">
             <div class="about-title-center">
-                <h1 class="about-hero-title">Building better businesses with smart strategy</h1>
-                <p class="about-hero-description">We're a forward-thinking consulting agency helping businesses grow smarter, scale faster, and lead with clarity.</p>
+                <h1 class="about-hero-title">Empowering businesses through digital transformation</h1>
+                <p class="about-hero-description">Breakaway Digital is an IT consulting company specializing in helping businesses navigate digital transformation, optimize their systems, and build scalable, future-ready solutions.</p>
             </div>
             
             <div class="about-image-wrap">
@@ -555,17 +555,17 @@
                 <!-- Mission Card -->
                 <div class="mission-card">
                     <h3 class="card-title">Our Mission</h3>
-                    <p class="card-content">To empower businesses of all sizes to unlock their full potential through strategic insight, tailored consulting, and measurable results. We are committed to delivering innovative solutions that drive sustainable growth, operational excellence, and long-term success for our clients.</p>
+                    <p class="card-content">To empower businesses with innovative technology strategies that accelerate growth and resilience in a fast-changing digital world.</p>
                 </div>
                 
                 <!-- Vision Card -->
                 <div class="vision-card">
                     <h3 class="card-title">Our Vision</h3>
-                    <p class="card-content">We aim to lead the way in reshaping how businesses grow, adapt, and lead in a changing world.</p>
+                    <p class="card-content">To be the trusted partner for organizations breaking away from outdated systems and embracing digital-first solutions.</p>
                     <ul class="vision-list">
-                        <li>Global impact</li>
-                        <li>Innovative thinking</li>
-                        <li>Empowering growth</li>
+                        <li>Digital-first approach</li>
+                        <li>Future-ready solutions</li>
+                        <li>Trusted partnership</li>
                     </ul>
                 </div>
             </div>
@@ -575,24 +575,24 @@
                 <h2 class="core-values-title">Our Core Values</h2>
                 <div class="core-values-grid">
                     <div class="value-item">
-                        <div class="value-icon">🎯</div>
-                        <h4 class="value-title">Excellence</h4>
-                        <p class="value-description">We strive for the highest standards in everything we do, delivering exceptional results that exceed expectations.</p>
+                        <div class="value-icon">💡</div>
+                        <h4 class="value-title">Innovation</h4>
+                        <p class="value-description">We embrace cutting-edge technology and creative solutions to drive digital transformation and business growth.</p>
                     </div>
                     <div class="value-item">
                         <div class="value-icon">🤝</div>
-                        <h4 class="value-title">Integrity</h4>
-                        <p class="value-description">We conduct business with honesty, transparency, and ethical practices in all our interactions.</p>
+                        <h4 class="value-title">Trust</h4>
+                        <p class="value-description">We build lasting relationships through transparency, reliability, and delivering on our promises to our clients.</p>
                     </div>
                     <div class="value-item">
-                        <div class="value-icon">💡</div>
-                        <h4 class="value-title">Innovation</h4>
-                        <p class="value-description">We embrace creative thinking and cutting-edge solutions to solve complex business challenges.</p>
+                        <div class="value-icon">⚡</div>
+                        <h4 class="value-title">Agility</h4>
+                        <p class="value-description">We adapt quickly to changing technology landscapes and help businesses stay ahead of digital trends.</p>
                     </div>
                     <div class="value-item">
-                        <div class="value-icon">🚀</div>
-                        <h4 class="value-title">Growth</h4>
-                        <p class="value-description">We are committed to continuous improvement and helping our clients achieve sustainable growth.</p>
+                        <div class="value-icon">🎯</div>
+                        <h4 class="value-title">Excellence</h4>
+                        <p class="value-description">We deliver exceptional IT consulting services with meticulous attention to detail and measurable results.</p>
                     </div>
                 </div>
             </div>
