--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Copora - Webflow HTML website template</title>
-        <meta content="Expert consulting services to help your business grow. Get tailored strategies, insights, and solutions from industry professionals. Results-driven support." name="description"/>
+        <title>Breakaway Digital - IT Consulting & Digital Transformation</title>
+        <meta content="Breakaway Digital provides IT consulting services to help businesses navigate digital transformation, optimize systems, and build scalable, future-ready solutions." name="description"/>
         <meta content="Copora - Webflow HTML website template" property="og:title"/>
         <meta content="Expert consulting services to help your business grow. Get tailored strategies, insights, and solutions from industry professionals. Results-driven support." property="og:description"/>
         <meta content="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/684bb2daf1cb95685a57c42a_dd522afe19ff66db3bd2ea1bdc05493e_open-graph-01.jpg" property="og:image"/>
@@ -109,8 +109,8 @@
                     <div class="hero-content-wrap">
                         <div class="hero-top-wrap">
                             <div class="hero-title-wrap">
-                                <h1 data-w-id="34a7cd46-fa9f-b0ea-8579-a048e499c86c" class="hero-title">Driving business growth through expert strategy</h1>
-                                <p data-w-id="1052487d-6cd5-e46e-62ee-c72f4afbcc34">Unlock your company's full potential with expert guidance, tailored solutions, and proven results from our seasoned consultants.</p>
+                                <h1 data-w-id="34a7cd46-fa9f-b0ea-8579-a048e499c86c" class="hero-title">Empowering businesses through digital transformation</h1>
+                                <p data-w-id="1052487d-6cd5-e46e-62ee-c72f4afbcc34">Breakaway Digital specializes in helping businesses navigate digital transformation, optimize their systems, and build scalable, future-ready solutions.</p>
                             </div>
                             <div data-w-id="2b2e4955-ad55-438f-d5e8-526c1dac2fa0">
                                 <a data-wf--button--variant="base" data-w-id="6969d3fc-d6b4-72a3-9442-458bd89b7317" href="/breakaway-digital-2/about.html" class="button-link-hover w-inline-block">
@@ -175,25 +175,25 @@
                 <div class="service-main-wrap">
                     <div class="section-title section-center-title">
                         <div data-wf--pre-section-title--variant="base" data-w-id="4c9e3971-55ca-d4dc-dd7d-3cd8c98d88fa" class="pre-section-title">What we offer</div>
-                        <h2 data-w-id="26a70b40-4095-cf39-2f00-91af65746455">Our core consulting services</h2>
-                        <p data-w-id="f75dd954-a7c6-45fa-e144-adfc3628d172" class="section-description">We provide tailored consulting solutions to help businesses overcome challenges, seize opportunities, and achieve sustainable growth.</p>
+                        <h2 data-w-id="26a70b40-4095-cf39-2f00-91af65746455">Our IT consulting services</h2>
+                        <p data-w-id="f75dd954-a7c6-45fa-e144-adfc3628d172" class="section-description">We provide comprehensive IT consulting solutions to help businesses navigate digital transformation, optimize their systems, and build scalable, future-ready technology infrastructure.</p>
                     </div>
                     <div data-w-id="d9cd339a-925d-e449-9da9-ede7c03613c4" class="w-layout-grid grid-service">
                         <a href="/services.html" class="service-item w-inline-block">
                             <img src="https://www.asta.com.au/media/1482/pexels-rebrand-cities-1367271.jpg" loading="eager" alt="Image" class="service-image"/>
-                            <div class="service-title">Business strategy</div>
+                            <div class="service-title">Technology Strategy</div>
                         </a>
-                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
+                        <a href="/breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d967427f0c59b655b24_service-02.jpg" loading="eager" alt="Image" class="service-image"/>
-                            <div class="service-title">Process optimization</div>
+                            <div class="service-title">AI Readiness</div>
                         </a>
-                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
+                        <a href="/breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d96fe90bfcea80b9a6a_service-03.jpg" loading="eager" alt="Image" class="service-image"/>
-                            <div class="service-title">Financial advisory</div>
+                            <div class="service-title">Cyber Security</div>
                         </a>
-                        <a href="//breakaway-digital-2/services.html" class="service-item w-inline-block">
+                        <a href="/breakaway-digital-2/services.html" class="service-item w-inline-block">
                             <img src="https://cdn.prod.website-files.com/682eb96f62a81d664ea524a9/68319d964991f2e7abc51fe1_c9af04cf09a0ce950abb6e3ac81f7407_service-04.jpg" loading="eager" alt="Image" class="service-image"/>
-                            <div class="service-title">Market research</div>
+                            <div class="service-title">IT Infrastructure</div>
                         </a>
                     </div>
                 </div>
@@ -226,9 +226,9 @@
                         
                         <!-- About Content -->
                         <div class="about-text">
-                            <div class="about-label">About Copora</div>
-                            <h2 class="about-title">Driven by insight. Focused on results.</h2>
-                            <p class="about-description">We provide tailored consulting solutions to help businesses overcome challenges, seize opportunities, and achieve sustainable growth.</p>
+                            <div class="about-label">About Breakaway Digital</div>
+                            <h2 class="about-title">Empowering digital transformation. Building future-ready solutions.</h2>
+                            <p class="about-description">We specialize in helping businesses navigate digital transformation, optimize their systems, and build scalable, future-ready technology infrastructure.</p>
                             <a href="/breakaway-digital-2/about.html" class="about-button">More about us</a>
                         </div>
                     </div>
