--- a/services.html
+++ b/services.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Services - Copora</title>
-    <meta content="Expert consulting services to help your business grow. Get tailored strategies, insights, and solutions from industry professionals." name="description"/>
+    <title>Services - Breakaway Digital</title>
+    <meta content="IT consulting services for digital transformation, technology strategy, AI readiness, cyber security, and IT infrastructure optimization." name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="styles.css?v=20250122" rel="stylesheet" type="text/css"/>
     <link href="footer.css" rel="stylesheet" type="text/css"/>
