Complete website transformation to Breakaway Digital with detailed services

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Contact Us - Copora</title>
-    <meta content="Get in touch with our expert consulting team. We're ready to help solve your business challenges and drive growth." name="description"/>
+    <title>Contact Us - Breakaway Digital</title>
+    <meta content="Get in touch with our expert IT consulting team. We're ready to help with your digital transformation and technology challenges." name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="styles.css?v=20250122" rel="stylesheet" type="text/css"/>
     <link href="footer.css" rel="stylesheet" type="text/css"/>
