--- a/who-i-work-with.html
+++ b/who-i-work-with.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Who I Work With - Copora</title>
-    <meta content="Discover the industries and types of businesses I work with to drive growth and success." name="description"/>
+    <title>Who I Work With - Breakaway Digital</title>
+    <meta content="Discover the industries and types of businesses we work with for digital transformation and IT consulting success." name="description"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link href="styles.css?v=20250122" rel="stylesheet" type="text/css"/>
     <link href="footer.css" rel="stylesheet" type="text/css"/>
